Changed datatypes of TaskSpec and ServiceTask to reduce RAM usage (#445)
* Added topology and experiment generators, added new test to show how to use it.

* Changed types of ServiceTask to reduce RAM usage

* Changed types of TaskSpec to reduce RAM usage

* Fix bug that caused simulations not to stop because the mutex was not called properly.